--- a/styles/components/widgets/sidebar.module.scss
+++ b/styles/components/widgets/sidebar.module.scss
@@ -1,7 +1,8 @@
 .sidebar {
 	margin: 0;
 	padding: 0;
-	width: 200px;
+	// width: 200px;
+	width: inherit;
 	background-color: #f1f1f1;
 	position: fixed;
 	height: 100%;
