--- a/styles/components/widgets/sidebar.module.scss
+++ b/styles/components/widgets/sidebar.module.scss
@@ -3,20 +3,22 @@
 	padding: 0;
 	// width: 200px;
 	width: inherit;
-	background-color: #f1f1f1;
+	background-color:#282828;
 	position: fixed;
 	height: 100%;
 	overflow: auto;
-
+	border: 1px solid #282828;
 	a {
 		display: block;
 		padding: 16px;
 		text-decoration: none;
+		color:white;
+        border: 1px solid #282828;
     cursor: pointer;
 
 		&:hover {
 			&:not(.active) {
-				background: #22a774;
+				background: #000000;
 				color: #fff;
 			}
 		}
@@ -24,6 +26,6 @@
 }
 
 .activeMenu {
-  background: #22a774;
+  background: #000000;
   color: #fff !important;
 }
