--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,25 @@ div.content {
   height: 1000px;
 }
 
+.pagination > li {
+  border-radius: 4px;
+  padding: 5px;
+}
+
+.page-item > .page-link {
+  border-radius: 4px;
+  color: #293042;
+}
+
+.page-item > .page-link:hover {
+  background-color: #007bff;
+  color: #ffffff;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
